--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
-spring.application.name=imageboardV2
+spring.application.name=imageboard
+
+# DataSource configuration for MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/imageboard?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA / Hibernate configuration
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+# Web server configuration (optional)
+server.port=8080
+
+# Logging configuration (optional)
+logging.level.root=INFO
+
