--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>1.18.34</version>
             <scope>annotationProcessor</scope>
         </dependency>
         <dependency>
